# memory-pipe

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/memory_pipe/: __init__.py
src/memory_pipe/cli/: __init__.py  main.py
src/memory_pipe/engine/: context.py  extractor.py
src/memory_pipe/mcp_server/: __init__.py  tools.py
src/memory_pipe/search/: vector_store.py
src/memory_pipe/storage/: database.py  models.py
tests/: test_context.py  test_database.py  test_extractor.py  test_models.py  test_vector_store.py
