[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-pipe"
version = "0.1.0"
description = "Lightweight AI agent memory and context persistence library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "EdgarOrtegaRamirez" }
]
keywords = ["ai", "agent", "memory", "context", "llm", "sqlite", "vector"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sqlite-utils>=3.36",
    "pydantic>=2.7",
    "pyyaml>=6.0.1",
    "rich>=13.7",
    "click>=8.1",
]

optional-dependencies.vector = [
    "numpy>=1.26",
]

optional-dependencies.mcp = [
    "mcp>=1.0",
]

optional-dependencies.dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[project.scripts]
memory-pipe = "memory_pipe.cli.main:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
