[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-pipe"
version = "0.1.0"
description = "Lightweight AI agent memory and context persistence library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "EdgarOrtegaRamirez" }
]
keywords = ["ai", "agent", "memory", "context", "llm", "sqlite", "vector"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sqlite-utils>=3.39",
    "pydantic>=2.13",
    "pyyaml>=6.0.3",
    "rich>=15.0",
    "click>=8.4",
]

optional-dependencies.vector = [
    "numpy>=2.0",
]

optional-dependencies.mcp = [
    "mcp>=1.0",
]

optional-dependencies.dev = [
    "pytest>=9.1",
    "pytest-cov>=7.1",
    "pytest-asyncio>=1.4",
    "ruff>=0.15",
]

[project.scripts]
memory-pipe = "memory_pipe.cli.main:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
